objects/ALTF__Account_Plan_Report_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows the user to define a list of account manager plan reports to be displayed as navigation links on Account Manager pages.</description>
    <fields>
        <fullName>ALTF__Display_as__c</fullName>
        <description>Display as</description>
        <inlineHelpText>Display as</inlineHelpText>
        <label>Display As</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Report_Id__c</fullName>
        <label>Report Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Altify Account Manager Plan Report List</label>
</CustomObject>